# MCPInception

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  HOW_TO_MCP  README.md  README_openScrape.md  __init__.py  create-venv.sh  example_scrape.py  helpers.py  main.py  mcp_demo_test_questions.md  openScrape.py  pyproject.toml  quick-setup.sh  sample.py  template.py  yc_mcp_server.py
frontend/: README.md  api.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.next/: trace
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 30c2b7df90d14250.webpack.hot-update.json  e4ca39b166ee4be3.webpack.hot-update.json  webpack.024858fc64dde203.hot-update.js  webpack.220656034db1d526.hot-update.js  webpack.2d94a6c65463d9af.hot-update.js  webpack.2df95473a1d26241.hot-update.js  webpack.3054d48b194ad827.hot-update.js  webpack.30c2b7df90d14250.hot-update.js  webpack.361c2f72c48f5d22.hot-update.js  webpack.3a96b5e848fa335f.hot-update.js  webpack.3ec3af9184ac9efe.hot-update.js  webpack.40195f41799a2d53.hot-update.js  webpack.64d81f4cccb4c68e.hot-update.js  webpack.74b30858538843cc.hot-update.js  webpack.74e8aaa26660bd6d.hot-update.js  webpack.757f5cf7e4b60cbd.hot-update.js  webpack.7a2babf587b9f689.hot-update.js  webpack.841664483de8130e.hot-update.js  webpack.87577938e5e26514.hot-update.js  webpack.9751cf0d3cfafc1e.hot-update.js  webpack.a39784ee17c2c11f.hot-update.js  webpack.a65180523760b376.hot-update.js  webpack.a664021657b36a6d.hot-update.js  webpack.aee9c30ea6b1c884.hot-update.js  webpack.c0b90e890c3c1db8.hot-update.js  webpack.ca512fa605ce6d0a.hot-update.js  webpack.d2330a590cbe3824.hot-update.js  webpack.e4ca39b166ee4be3.hot-update.js  webpack.e62907253a5d1454.hot-update.js  webpack.edb6916904cfe49d.hot-update.js  webpack.f393ed7e8b6cb00a.hot-update.js  (+3 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DotBackground.tsx  Footer.tsx  Header.tsx
frontend/src/lib/: api.ts
setup/: create-venv.sh
(+39 files in other folders)
